small comment tweaks